responsive check done

--- a/careers.html
+++ b/careers.html
@@ -116,28 +116,28 @@
                 </div>
             </div>
             <div class="row justify-content-center">                
-                <div class="col-md-10 col-xl-8">
+                <div class="col-md-12 col-xl-8">
                     <form action="" class="contact-form">
                         <div class="row">
-                            <div class="col-6">
+                            <div class="col-sm-6">
                                 <div class="form-group mb-4">
                                     <label for="">Full Name <sup>*</sup></label>
                                     <input type="text" class="form-control">
                                 </div>
                             </div>
-                            <div class="col-6">
+                            <div class="col-sm-6">
                                 <div class="form-group mb-4">
                                     <label for="">Qualification <sup>*</sup></label>
                                     <input type="text" class="form-control">
                                 </div>
                             </div>
-                            <div class="col-6">
+                            <div class="col-sm-6">
                                 <div class="form-group mb-4">
                                     <label for="">Current Employer <sup>*</sup></label>
                                     <input type="text" class="form-control">
                                 </div>
                             </div>
-                            <div class="col-6">
+                            <div class="col-sm-6">
                                 <div class="form-group mb-4">
                                     <label for="">Current Designation <sup>*</sup></label>
                                     <input type="text" class="form-control">
