--- a/services.html
+++ b/services.html
@@ -108,7 +108,7 @@
     <section class="service-info section-sapce">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-lg-8">
+                <div class="col-xl-9">
                     <div class="default-content">
                         <h2>Business Process Management Solutions</h2>
                         <p>Transforming your business operations with our vast industry experience, technological expertise, and a dedicated workforce. We help you stay ahead of the curve and will be adding pace to your business.</p>
@@ -139,14 +139,14 @@
                 <div class="col-lg-12 col-xl-7">
                     <form class="row justify-content-center">
                         <div class="row justify-content-center">
-                            <div class="col-6">
+                            <div class="col-sm-6 mb-4">
                                 <input type="text" class="form-control" placeholder="Name" aria-label="Name">
                             </div>
-                            <div class="col-6">
+                            <div class="col-sm-6 mb-4">
                                 <input type="text" class="form-control" placeholder="Phone Number" aria-label="Phone Number">
                             </div>
                         </div>
-                        <div class="row justify-content-center mt-4">
+                        <div class="row justify-content-center">
                             <div class="col text-center">
                                 <button type="submit" class="btn btn-info">Request Callback</button>
                             </div>
