--- a/contact.html
+++ b/contact.html
@@ -105,13 +105,13 @@
     <!-- top banner end -->
 
     <!-- about start -->
-    <section class="home-about section-sapce">
+    <section class="home-about contact-page section-sapce">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-md-6">
                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11523.844461932542!2d76.55529732179284!3d30.829000104578906!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ff95fe0076bc1%3A0xbbebc9856aa36e6f!2sKurali!5e0!3m2!1sen!2sin!4v1673161173788!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-md-6">
                     <span class="sec-type">Contact us</span>
                     <h3>Needs Help? <br> Let’s Get in Touch</h3>
                     
@@ -162,7 +162,7 @@
                 </div>
             </div>
             <div class="row justify-content-center">                
-                <div class="col-md-10 col-xl-8">
+                <div class="col-md-12 col-xl-8">
                     <form action="" class="contact-form">
                         <div class="row">
                             <div class="col-12">
@@ -171,25 +171,25 @@
                                     <input type="text" class="form-control">
                                 </div>
                             </div>
-                            <div class="col-6">
+                            <div class="col-sm-6">
                                 <div class="form-group mb-4">
                                     <label for="">First Name <sup>*</sup></label>
                                     <input type="text" class="form-control">
                                 </div>
                             </div>
-                            <div class="col-6">
+                            <div class="col-sm-6">
                                 <div class="form-group mb-4">
                                     <label for="">Last Name <sup>*</sup></label>
                                     <input type="text" class="form-control">
                                 </div>
                             </div>
-                            <div class="col-6">
+                            <div class="col-sm-6">
                                 <div class="form-group mb-4">
                                     <label for="">Email <sup>*</sup></label>
                                     <input type="email" class="form-control">
                                 </div>
                             </div>
-                            <div class="col-6">
+                            <div class="col-sm-6">
                                 <div class="form-group mb-4">
                                     <label for="">Telephone</label>
                                     <input type="text" class="form-control">
