service link update on home page

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             </div>
             <div class="row">
                 <div class="col-12 text-center">
-                    <p>Check out our all services <a href="javascript:;" class="arrow-link">More Services <span class="material-icons-round"> east </span></a> </p>
+                    <p>Check out our all services <a href="services.html" class="arrow-link">More Services <span class="material-icons-round"> east </span></a> </p>
                 </div>
             </div>
         </div>
