update why choose us section on about and service page

--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
                 <div class="col-lg-6">
                     <div class="about-content">
                         <span class="sec-type">About JEBA</span>
-                        <h3>Trust That You're Working <br> With The Best Accountants</h3>
+                        <h3>Trust That You're Working <br> With The Best Accountants and Business Advisors</h3>
                         <p>Our aim is to provide quality Accounting, Taxation and Bookkeeping services to our Clients so that they can focus more on expanding their business activities instead of worrying about their present workload.  JEBA can be trusted to provide your firm with immediate and reliable assistance. Our knowledgeable accountants have over 10 years of collective New Zealand accounting experience and are an organizational force to be reckoned with. Having providing figures and balanced books for a wide range of businesses, it's safe to say there isn't much that the staff at Joyous Elite Business Advisory haven't seen and dealt with. </p>
                         <p>From preparing Balance Sheet or profit and loss sheets to Book-keeping, we simply get your Client figures in order, on time.</p>
                         
@@ -179,19 +179,19 @@
                             <img src="/images/icon1.png" alt="icon">
                         </div>
                         <div class="content">
-                            <h4>Business Services AU & NZ</h4>
-                            <p>Pegasusca Taxation can look after your business Tax compliance ( Companies, Partnerships, etc)  in Australia & New Zealand.</p>
+                            <h4>Accounting Outsourcing</h4>
+                            <p>Get the expertise of Accounting Professionals not worrying about the present workload and you use that extra time to expand your business.</p>
                         </div>
                     </div>
                     <div class="wcu-item">
                         <div class="icon">
-                            <img src="/images/icon3.png" alt="icon">
+                            <img src="/images/icon1.png" alt="icon">
                         </div>
                         <div class="content">
-                            <h4>BAS Services</h4>
-                            <p>You can be confident that your ATO tax liabilities and obligations are sorted on time and your BAS lodgement is correct.</p>
+                            <h4>Business Services New Zeeland</h4>
+                            <p>Pegasusca Taxation can look after your business Tax compliance ( Companies, Partnerships, etc)  in New Zealand.</p>
                         </div>
-                    </div>
+                    </div>                    
                 </div>
 
                 <div class="col-xl-4">
@@ -203,20 +203,20 @@
                 <div class="col-xl-4">
                     <div class="wcu-item">
                         <div class="icon">
-                            <img src="/images/icon2.png" alt="icon">
+                            <img src="/images/icon3.png" alt="icon">
                         </div>
                         <div class="content">
-                            <h4>Individual Service AU & NZ</h4>
-                            <p>We will consider your  specific circumstances for maximum tax refunds and minimum tax bills that are legally possible.</p>
+                            <h4>Taxation Services</h4>
+                            <p>You can be confident that your IRD tax liabilities and obligations are sorted on time and your Tax lodgement is correct.</p>
                         </div>
                     </div>
                     <div class="wcu-item">
                         <div class="icon">
-                            <img src="/images/icon4.png" alt="icon">
+                            <img src="/images/icon2.png" alt="icon">
                         </div>
                         <div class="content">
-                            <h4>Single Touch Payroll (STP)</h4>
-                            <p>We can assist your business with STP to report tax and superannuation information of your employees to  ATO.</p>
+                            <h4>Individual Service NZ</h4>
+                            <p>We will consider your  specific circumstances for maximum tax refunds and minimum tax bills that are legally possible.</p>
                         </div>
                     </div>
                 </div>
