--- a/services.html
+++ b/services.html
@@ -234,19 +234,19 @@
                             <img src="/images/icon1.png" alt="icon">
                         </div>
                         <div class="content">
-                            <h4>Business Services AU & NZ</h4>
-                            <p>Pegasusca Taxation can look after your business Tax compliance ( Companies, Partnerships, etc)  in Australia & New Zealand.</p>
+                            <h4>Accounting Outsourcing</h4>
+                            <p>Get the expertise of Accounting Professionals not worrying about the present workload and you use that extra time to expand your business.</p>
                         </div>
                     </div>
                     <div class="wcu-item">
                         <div class="icon">
-                            <img src="/images/icon3.png" alt="icon">
+                            <img src="/images/icon1.png" alt="icon">
                         </div>
                         <div class="content">
-                            <h4>BAS Services</h4>
-                            <p>You can be confident that your ATO tax liabilities and obligations are sorted on time and your BAS lodgement is correct.</p>
+                            <h4>Business Services New Zeeland</h4>
+                            <p>Pegasusca Taxation can look after your business Tax compliance ( Companies, Partnerships, etc)  in New Zealand.</p>
                         </div>
-                    </div>
+                    </div>                    
                 </div>
 
                 <div class="col-xl-4">
@@ -258,20 +258,20 @@
                 <div class="col-xl-4">
                     <div class="wcu-item">
                         <div class="icon">
-                            <img src="/images/icon2.png" alt="icon">
+                            <img src="/images/icon3.png" alt="icon">
                         </div>
                         <div class="content">
-                            <h4>Individual Service AU & NZ</h4>
-                            <p>We will consider your  specific circumstances for maximum tax refunds and minimum tax bills that are legally possible.</p>
+                            <h4>Taxation Services</h4>
+                            <p>You can be confident that your IRD tax liabilities and obligations are sorted on time and your Tax lodgement is correct.</p>
                         </div>
                     </div>
                     <div class="wcu-item">
                         <div class="icon">
-                            <img src="/images/icon4.png" alt="icon">
+                            <img src="/images/icon2.png" alt="icon">
                         </div>
                         <div class="content">
-                            <h4>Single Touch Payroll (STP)</h4>
-                            <p>We can assist your business with STP to report tax and superannuation information of your employees to  ATO.</p>
+                            <h4>Individual Service NZ</h4>
+                            <p>We will consider your  specific circumstances for maximum tax refunds and minimum tax bills that are legally possible.</p>
                         </div>
                     </div>
                 </div>
