--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8 col-xl-6 text-center">
-                                <div class="slide-head animated slideInLeft">We Outsource</div>
-                                <div class="bottom-head animated slideInLeft">Accounting Services</div>
+                                <div class="bottom-head animated slideInLeft">We're your</div>
+                                <div class="slide-head animated slideInLeft">Accounting Outsource Partner</div>
+                                <div class="animated slideInLeft different-font">Joyous Elite Business Advisory</div>
                             </div>
                         </div>
                     </div>
@@ -114,6 +115,7 @@
                                 <p class="animated slideInDown">Struggling to balance end of year accounts?</p>
                                 <p class="animated slideInDown">Hassled while doing Bank Reconciliations?</p>
                                 <div class="slide-head animated slideInUp">RELAX! WE CAN HELP </div>
+                                <div class="different-font animated slideInLeft">Joyous Elite Business Advisory</div>
                             </div>
                         </div>
                     </div>
@@ -126,7 +128,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8 col-xl-6 text-center">
                                 <div class="slide-head animated slideInLeft">Business Process Management Solutions </div>
-                                <div class="bottom-head animated slideInLeft">Joyous Elite Business Advisory</div>
+                                <div class="different-font animated slideInLeft">Joyous Elite Business Advisory</div>
                             </div>
                         </div>
                     </div>
@@ -321,71 +323,6 @@
         </div>
     </section>
     <!-- how it works end -->
-
-    <!-- why choose us -->
-    <section class="home-wcu section-sapce pb-0">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-sm-10 col-lg-8 col-xl-6 text-center">
-                    <div class="section-heading">
-                        <span class="sec-type two-line">Why Choose Us</span>
-                        <h2 class="sec-heading">Accounting by the Book. Perform with Trust.</h2>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row align-items-center">
-                <div class="col-xl-4">
-                    <div class="wcu-item">
-                        <div class="icon">
-                            <img src="/images/icon1.png" alt="icon">
-                        </div>
-                        <div class="content">
-                            <h4>Business Services AU & NZ</h4>
-                            <p>Pegasusca Taxation can look after your business Tax compliance ( Companies, Partnerships, etc)  in Australia & New Zealand.</p>
-                        </div>
-                    </div>
-                    <div class="wcu-item">
-                        <div class="icon">
-                            <img src="/images/icon3.png" alt="icon">
-                        </div>
-                        <div class="content">
-                            <h4>BAS Services</h4>
-                            <p>You can be confident that your ATO tax liabilities and obligations are sorted on time and your BAS lodgement is correct.</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-xl-4">
-                    <div class="wcu-img-wrapper">
-                        <img src="/images/img_2.png" alt="girl">
-                    </div>
-                </div>
-                
-                <div class="col-xl-4">
-                    <div class="wcu-item">
-                        <div class="icon">
-                            <img src="/images/icon2.png" alt="icon">
-                        </div>
-                        <div class="content">
-                            <h4>Individual Service AU & NZ</h4>
-                            <p>We will consider your  specific circumstances for maximum tax refunds and minimum tax bills that are legally possible.</p>
-                        </div>
-                    </div>
-                    <div class="wcu-item">
-                        <div class="icon">
-                            <img src="/images/icon4.png" alt="icon">
-                        </div>
-                        <div class="content">
-                            <h4>Single Touch Payroll (STP)</h4>
-                            <p>We can assist your business with STP to report tax and superannuation information of your employees to  ATO.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- why choose us -->
 
     <!-- Footer start -->
     <footer class="main-footer">
