font changes done

--- a/about.html
+++ b/about.html
@@ -188,8 +188,8 @@
                             <img src="/images/icon1.png" alt="icon">
                         </div>
                         <div class="content">
-                            <h4>Business Services New Zeeland</h4>
-                            <p>Pegasusca Taxation can look after your business Tax compliance ( Companies, Partnerships, etc)  in New Zealand.</p>
+                            <h4>Business Services New Zealand</h4>
+                            <p>Joyous Elite Business Advisory can look after your business Tax compliance ( Companies, Partnerships, etc)  in New Zealand.</p>
                         </div>
                     </div>                    
                 </div>
