--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <div class="col-4 col-md-8">
                         <nav class="navbar navbar-expand-lg">
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
+                                <span></span> <span></span> <span></span> <span></span>
                             </button>
 
                             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -97,9 +97,9 @@
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8 col-xl-6 text-center">
-                                <div class="bottom-head animated slideInLeft">We're your</div>
+                                <p class="animated slideInDown">We are your</p>
                                 <div class="slide-head animated slideInLeft">Accounting Outsource Partner</div>
-                                <div class="animated slideInLeft different-font">Joyous Elite Business Advisory</div>
+                                <div class="animated slideInLeft different-font tk-filicudi-solid">Joyous Elite Business Advisory</div>
                             </div>
                         </div>
                     </div>
@@ -115,7 +115,7 @@
                                 <p class="animated slideInDown">Struggling to balance end of year accounts?</p>
                                 <p class="animated slideInDown">Hassled while doing Bank Reconciliations?</p>
                                 <div class="slide-head animated slideInUp">RELAX! WE CAN HELP </div>
-                                <div class="different-font animated slideInLeft">Joyous Elite Business Advisory</div>
+                                <div class="different-font animated slideInLeft tk-filicudi-solid">Joyous Elite Business Advisory</div>
                             </div>
                         </div>
                     </div>
@@ -128,7 +128,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8 col-xl-6 text-center">
                                 <div class="slide-head animated slideInLeft">Business Process Management Solutions </div>
-                                <div class="different-font animated slideInLeft">Joyous Elite Business Advisory</div>
+                                <div class="different-font animated slideInLeft tk-filicudi-solid">Joyous Elite Business Advisory</div>
                             </div>
                         </div>
                     </div>
@@ -144,7 +144,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-6">
                     <span class="sec-type">JEBA</span>
-                    <h3>YOU DIDN'T COME THIS FAR TO ONLY COME THIS FAR. We will assist you in your business growth.</h3>
+                    <h3>YOU DIDN'T COME THIS FAR TO ONLY COME THIS FAR. <br>We will assist you in your business growth.</h3>
                     <p>Business Advisory needs to support Clients in more ways than one. It should propel them to achieve their business objectives and goals using their financial insights gained over a period of time.</p>
                 
                     <div class="exp-year">
@@ -284,9 +284,9 @@
                         <div class="icon-wrapper">
                             <span class="material-icons-round"> diamond </span>
                         </div>
-                        <span class="sec-type no-line">Audit & Assurance</span>
-                        <h3>Transparency is a keyword</h3>
-                        <p>The capital markets & investors use the information provided by us. We know our onus of responsibility!</p>
+                        <span class="sec-type no-line">Accounting Outsourcing</span>
+                        <h3>Enhance Business Continuity</h3>
+                        <p>We're an extended part of your team, keeping a constant eye on your accounting, giving you peace-of-mind to help you achieve your business goals.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-xl-3">
