font changes done

--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8 col-xl-6 text-center">
                         <div class="slide-head wow animated fadeInDown">Contact Us</div>
-                        <div class="bottom-head wow animated fadeInUp">Let's start a conversation! We welcome all your inquiries.</div>
+                        <div class="bottom-head wow animated fadeInUp">Let's start a conversation! <span>We welcome all your inquiries.</span></div>
                     </div>
                 </div>
             </div>
