all changes done

--- a/careers.html
+++ b/careers.html
@@ -104,6 +104,26 @@
     </section>
     <!-- top banner end -->
 
+     <!-- about start -->
+    <section class="service-info section-sapce">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-xl-10">
+                    <div class="default-content">
+                        <h2>Working At JEBA</h2>
+                        <p>If you want to advance your career with a leader,cosider JEBA. We stand among the worlds foremost corporations providing Accounting Outsourcing and Business Advisory solutions. Bt providing these services among a vast range of Clientele, We have enhanced Clients businesses around world. Specifically, in New Zealand. We focus on providing he best quality services to Clients. We focus on Client's business loopholes. To address them, we have brought many highly effective plicies and plans to find and fix them out.</p>
+                    </div>
+                    <div class="list-boxes">
+                        <p>Be part of a winning company.</p>
+                        <p>Thrive on our Performance Culture.</p>
+                        <p>Enjoy our inspiring Work Environment.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- about end -->
+
     <!-- contact form start -->
     <section class="home-services section-sapce">
         <div class="container">
@@ -165,71 +185,6 @@
         </div>
     </section>
     <!-- contact form end -->
-
-    <!-- why choose us -->
-    <section class="home-wcu section-sapce pb-0">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-sm-10 col-lg-8 col-xl-6 text-center">
-                    <div class="section-heading">
-                        <span class="sec-type two-line">Why Choose Us</span>
-                        <h2 class="sec-heading">Accounting by the Book. Perform with Trust.</h2>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row align-items-center">
-                <div class="col-xl-4">
-                    <div class="wcu-item">
-                        <div class="icon">
-                            <img src="/images/icon1.png" alt="icon">
-                        </div>
-                        <div class="content">
-                            <h4>Business Services AU & NZ</h4>
-                            <p>Pegasusca Taxation can look after your business Tax compliance ( Companies, Partnerships, etc)  in Australia & New Zealand.</p>
-                        </div>
-                    </div>
-                    <div class="wcu-item">
-                        <div class="icon">
-                            <img src="/images/icon3.png" alt="icon">
-                        </div>
-                        <div class="content">
-                            <h4>BAS Services</h4>
-                            <p>You can be confident that your ATO tax liabilities and obligations are sorted on time and your BAS lodgement is correct.</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-xl-4">
-                    <div class="wcu-img-wrapper">
-                        <img src="/images/img_2.png" alt="girl">
-                    </div>
-                </div>
-                
-                <div class="col-xl-4">
-                    <div class="wcu-item">
-                        <div class="icon">
-                            <img src="/images/icon2.png" alt="icon">
-                        </div>
-                        <div class="content">
-                            <h4>Individual Service AU & NZ</h4>
-                            <p>We will consider your  specific circumstances for maximum tax refunds and minimum tax bills that are legally possible.</p>
-                        </div>
-                    </div>
-                    <div class="wcu-item">
-                        <div class="icon">
-                            <img src="/images/icon4.png" alt="icon">
-                        </div>
-                        <div class="content">
-                            <h4>Single Touch Payroll (STP)</h4>
-                            <p>We can assist your business with STP to report tax and superannuation information of your employees to  ATO.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- why choose us -->
 
     <!-- Footer start -->
     <footer class="main-footer">
