--- a/services.html
+++ b/services.html
@@ -175,9 +175,9 @@
                         <div class="icon-wrapper">
                             <span class="material-icons-round"> diamond </span>
                         </div>
-                        <span class="sec-type no-line">Audit & Assurance</span>
-                        <h3>Transparency is a keyword</h3>
-                        <p>The capital markets & investors use the information provided by us. We know our onus of responsibility!</p>
+                        <span class="sec-type no-line">Accounting Outsourcing</span>
+                        <h3>Enhance Business Continuity</h3>
+                        <p>We're an extended part of your team, keeping a constant eye on your accounting, giving you peace-of-mind to help you achieve your business goals.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-xl-3">
@@ -216,7 +216,7 @@
     <!-- how it works end -->
 
     <!-- why choose us -->
-    <section class="home-wcu section-sapce pb-0">
+    <section class="home-wcu section-sapce">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-sm-10 col-lg-8 col-xl-6 text-center">
@@ -251,7 +251,7 @@
 
                 <div class="col-xl-4">
                     <div class="wcu-img-wrapper">
-                        <img src="/images/img_2.png" alt="girl">
+                        <img src="/images/img_2.webp" alt="thumbs up">
                     </div>
                 </div>
                 
