--- a/about.html
+++ b/about.html
@@ -161,7 +161,7 @@
     <!-- about callback end -->
 
     <!-- why choose us -->
-    <section class="home-wcu section-sapce pb-0">
+    <section class="home-wcu section-sapce">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-sm-10 col-lg-8 col-xl-6 text-center">
@@ -196,7 +196,7 @@
 
                 <div class="col-xl-4">
                     <div class="wcu-img-wrapper">
-                        <img src="/images/img_2.png" alt="girl">
+                        <img src="/images/img_2.webp" alt="thumbs up">
                     </div>
                 </div>
                 
