website changes 10.1.23 done

--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
 
     <!-- top banner start -->
     <section class="inner-banner">
-        <img src="/images/slide-two.jpg" alt="about banner">
+        <img src="/images/about-banner.jpg" alt="about banner">
         <div class="slide-content">
             <div class="container">
                 <div class="row justify-content-center">
@@ -119,7 +119,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="about-image about-page-img">
-                        <img src="/images/home-about.jpg" alt="home about">
+                        <img src="/images/about-jeba.jpg" alt="home about">
                         <div class="exp-year">
                             <span class="material-icons-round"> verified </span>
                             <h6>Your <small>Experienced Partners</small></h6>
@@ -133,6 +133,9 @@
 
     <!-- about callback start -->
     <section class="callback section-sapce">
+        <video autoplay muted loop id="myVideo">
+            <source src="/images/cta-video.mp4" type="video/mp4">
+        </video>
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-xl-7 text-center">
@@ -189,7 +192,7 @@
                         </div>
                         <div class="content">
                             <h4>Business Services New Zealand</h4>
-                            <p>Joyous Elite Business Advisory can look after your business Tax compliance ( Companies, Partnerships, etc)  in New Zealand.</p>
+                            <p>Joyous Elite Business Advisory can look after your business Tax compliance (Companies, LTC, Trusts, Partnerships, etc) in New Zealand.</p>
                         </div>
                     </div>                    
                 </div>
@@ -221,6 +224,20 @@
                     </div>
                 </div>
             </div>
+
+            <div class="row justify-content-center">
+                <div class="col-xl-4">
+                    <div class="wcu-item">
+                        <div class="icon">
+                            <img src="/images/xero.png" alt="icon">
+                        </div>
+                        <div class="content">
+                            <h4>Xero Certified Practitioners</h4>
+                            <p>Accounting professionals at JEBA are Xero Certified and are always ready to bestow their knowledge and experience towards Clients success.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <!-- why choose us -->
@@ -230,12 +247,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-4">
-                    <div class="footer-item">
+                    <div class="footer-item img-item">
                         <div class="footer-logo">
                             <a href="/index.html">
                                 <img src="/images/logo-white.png" alt="logo">
                             </a>
                         </div>
+                        <div class="certificate"><img src="/images/xero-full.png" alt="logo"></div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-xl-4">
@@ -245,7 +263,7 @@
                             <span class="material-icons-round"> room </span>
                             <address>
                                 <h5>Joyous Elite Business Advisory</h5>
-                                <p>Ward No 15, Station Mandi, Kurali,<br> Mohali (Punjab), India – 140103</p>
+                                <p>Ward No 15, Kurali,<br> Mohali (Punjab), India – 140103</p>
                             </address>
                         </div>
                         <div class="phone">
