--- a/careers.html
+++ b/careers.html
@@ -90,7 +90,7 @@
 
     <!-- top banner start -->
     <section class="inner-banner">
-        <img src="/images/slide-two.jpg" alt="career banner">
+        <img src="/images/career-banner.jpg" alt="career banner">
         <div class="slide-content">
             <div class="container">
                 <div class="row justify-content-center">
@@ -111,7 +111,7 @@
                 <div class="col-xl-10">
                     <div class="default-content">
                         <h2>Working At JEBA</h2>
-                        <p>If you want to advance your career with a leader,cosider JEBA. We stand among the worlds foremost corporations providing Accounting Outsourcing and Business Advisory solutions. Bt providing these services among a vast range of Clientele, We have enhanced Clients businesses around world. Specifically, in New Zealand. We focus on providing he best quality services to Clients. We focus on Client's business loopholes. To address them, we have brought many highly effective plicies and plans to find and fix them out.</p>
+                        <p>If you want to advance your career with a leader, consider JEBA. We stand among the worlds foremost corporations providing Accounting Outsourcing and Business Advisory solutions. By providing these services among a vast range of Clientele, We have enhanced Clients businesses around world specially in New Zealand. We focus on providing the best quality services to Clients. We figure out Client's business loopholes. To address them, we have brought many highly effective policies and plans to find and fix them out.</p>
                     </div>
                     <div class="list-boxes">
                         <p>Be part of a winning company.</p>
@@ -131,7 +131,7 @@
                 <div class="col-sm-10 col-lg-8 col-xl-6 text-center">
                     <div class="section-heading">
                         <h2 class="sec-heading">TEAMWORK divides the task and multiplies the success</h2>
-                        <p>Enter the details below and kindly drop your resume. We will reach you with any job openings.</p>
+                        <p>Enter the details below and kindly drop your resume.<br> We will reach you with any job openings.</p>
                     </div>
                 </div>
             </div>
@@ -191,12 +191,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-4">
-                    <div class="footer-item">
+                    <div class="footer-item img-item">
                         <div class="footer-logo">
                             <a href="/index.html">
                                 <img src="/images/logo-white.png" alt="logo">
                             </a>
                         </div>
+                        <div class="certificate"><img src="/images/xero-full.png" alt="logo"></div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-xl-4">
@@ -206,7 +207,7 @@
                             <span class="material-icons-round"> room </span>
                             <address>
                                 <h5>Joyous Elite Business Advisory</h5>
-                                <p>Ward No 15, Station Mandi, Kurali,<br> Mohali (Punjab), India – 140103</p>
+                                <p>Ward No 15, Kurali,<br> Mohali (Punjab), India – 140103</p>
                             </address>
                         </div>
                         <div class="phone">
