--- a/contact.html
+++ b/contact.html
@@ -120,8 +120,8 @@
                             <span class="material-icons-round"> phone </span>
                         </div>
                         <div class="git-info">
-                            <h4>Call Us: <a href="tel:+91-988-871-0208">+91-988-871-0208</a></h4>
-                            <span>Office Time : 09:30 to 06:30 on Weekdays</span>
+                            <h4>Call Us: </h4>
+                            <span><a href="tel:+91-988-871-0208">+91-988-871-0208</a> (India) Shubham</span>
                         </div>
                     </div>
                     <div class="git-item">
@@ -140,7 +140,7 @@
                         <div class="git-info">
                             <h4>Address:</h4>
                             <span>Joyous Elite Business Advisory</span><br>
-                            <span>Ward No 15, Station Mandi, Kurali,<br> Mohali (Punjab), India – 140103</span>
+                            <span>Ward No 15, Kurali,<br> Mohali (Punjab), India – 140103</span>
                         </div>
                     </div>
                 </div>                
@@ -244,12 +244,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-4">
-                    <div class="footer-item">
+                    <div class="footer-item img-item">
                         <div class="footer-logo">
                             <a href="/index.html">
                                 <img src="/images/logo-white.png" alt="logo">
                             </a>
                         </div>
+                        <div class="certificate"><img src="/images/xero-full.png" alt="logo"></div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-xl-4">
@@ -259,7 +260,7 @@
                             <span class="material-icons-round"> room </span>
                             <address>
                                 <h5>Joyous Elite Business Advisory</h5>
-                                <p>Ward No 15, Station Mandi, Kurali,<br> Mohali (Punjab), India – 140103</p>
+                                <p>Ward No 15, Kurali,<br> Mohali (Punjab), India – 140103</p>
                             </address>
                         </div>
                         <div class="phone">
