--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                             <span class="material-icons-round"> diamond </span>
                         </div>
                         <span class="sec-type no-line">Accounting Outsourcing</span>
-                        <h3>Enhance Business Continuity</h3>
+                        <h3>Enhance Business Growth</h3>
                         <p>We're an extended part of your team, keeping a constant eye on your accounting, giving you peace-of-mind to help you achieve your business goals.</p>
                     </div>
                 </div>
@@ -329,12 +329,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-4">
-                    <div class="footer-item">
+                    <div class="footer-item img-item">
                         <div class="footer-logo">
                             <a href="/index.html">
                                 <img src="/images/logo-white.png" alt="logo">
                             </a>
                         </div>
+                        <div class="certificate"><img src="/images/xero-full.png" alt="logo"></div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-xl-4">
@@ -344,7 +345,7 @@
                             <span class="material-icons-round"> room </span>
                             <address>
                                 <h5>Joyous Elite Business Advisory</h5>
-                                <p>Ward No 15, Station Mandi, Kurali,<br> Mohali (Punjab), India – 140103</p>
+                                <p>Ward No 15, Kurali,<br> Mohali (Punjab), India – 140103</p>
                             </address>
                         </div>
                         <div class="phone">
