--- a/services.html
+++ b/services.html
@@ -176,7 +176,7 @@
                             <span class="material-icons-round"> diamond </span>
                         </div>
                         <span class="sec-type no-line">Accounting Outsourcing</span>
-                        <h3>Enhance Business Continuity</h3>
+                        <h3>Enhance Business Growth</h3>
                         <p>We're an extended part of your team, keeping a constant eye on your accounting, giving you peace-of-mind to help you achieve your business goals.</p>
                     </div>
                 </div>
@@ -244,7 +244,7 @@
                         </div>
                         <div class="content">
                             <h4>Business Services New Zealand</h4>
-                            <p>Joyous Elite Business Advisory can look after your business Tax compliance ( Companies, Partnerships, etc)  in New Zealand.</p>
+                            <p>Joyous Elite Business Advisory can look after your business Tax compliance (Companies, LTC, Trusts, Partnerships, etc) in New Zealand.</p>
                         </div>
                     </div>                    
                 </div>
@@ -276,6 +276,20 @@
                     </div>
                 </div>
             </div>
+
+            <div class="row justify-content-center">
+                <div class="col-xl-4">
+                    <div class="wcu-item">
+                        <div class="icon">
+                            <img src="/images/xero.png" alt="icon">
+                        </div>
+                        <div class="content">
+                            <h4>Xero Certified Practitioners</h4>
+                            <p>Accounting professionals at JEBA are Xero Certified and are always ready to bestow their knowledge and experience towards Clients success.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <!-- why choose us -->
@@ -285,12 +299,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-4">
-                    <div class="footer-item">
+                    <div class="footer-item img-item">
                         <div class="footer-logo">
                             <a href="/index.html">
                                 <img src="/images/logo-white.png" alt="logo">
                             </a>
                         </div>
+                        <div class="certificate"><img src="/images/xero-full.png" alt="logo"></div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-xl-4">
@@ -300,7 +315,7 @@
                             <span class="material-icons-round"> room </span>
                             <address>
                                 <h5>Joyous Elite Business Advisory</h5>
-                                <p>Ward No 15, Station Mandi, Kurali,<br> Mohali (Punjab), India – 140103</p>
+                                <p>Ward No 15, Kurali,<br> Mohali (Punjab), India – 140103</p>
                             </address>
                         </div>
                         <div class="phone">
