--- a/services.html
+++ b/services.html
@@ -130,31 +130,33 @@
     <!-- about end -->
 
     <!-- about callback start -->
-    <section class="callback section-sapce">
+    <section class="callback">
         <video autoplay muted loop id="myVideo">
             <source src="/images/cta-video.mp4" type="video/mp4">
         </video>
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-8 col-xl-7 text-center">
-                    <h3 class="wow animated fadeInDown">You can simply request a callback from us:</h3>
-                </div>
-                <div class="col-lg-12 col-xl-7">
-                    <form class="row justify-content-center">
-                        <div class="row justify-content-center">
-                            <div class="col-sm-6 mb-4">
-                                <input type="text" class="form-control" placeholder="Name" aria-label="Name">
+        <div class="cta-content">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 col-xl-7 text-center">
+                        <h3 class="wow animated fadeInDown">You can simply request a callback from us:</h3>
+                    </div>
+                    <div class="col-lg-12 col-xl-7">
+                        <form class="row justify-content-center">
+                            <div class="row justify-content-center">
+                                <div class="col-sm-6 mb-4">
+                                    <input type="text" class="form-control" placeholder="Name" aria-label="Name">
+                                </div>
+                                <div class="col-sm-6 mb-4">
+                                    <input type="text" class="form-control" placeholder="Phone Number" aria-label="Phone Number">
+                                </div>
                             </div>
-                            <div class="col-sm-6 mb-4">
-                                <input type="text" class="form-control" placeholder="Phone Number" aria-label="Phone Number">
+                            <div class="row justify-content-center">
+                                <div class="col text-center">
+                                    <button type="submit" class="btn btn-info">Request Callback</button>
+                                </div>
                             </div>
-                        </div>
-                        <div class="row justify-content-center">
-                            <div class="col text-center">
-                                <button type="submit" class="btn btn-info">Request Callback</button>
-                            </div>
-                        </div>
-                    </form>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
