--- a/about.html
+++ b/about.html
@@ -132,7 +132,7 @@
     <!-- about end -->
 
     <!-- about callback start -->
-    <section class="callback section-sapce">
+    <section class="callback">
         <video autoplay muted loop id="myVideo">
             <source src="/images/cta-video.mp4" type="video/mp4">
         </video>
