--- a/about.html
+++ b/about.html
@@ -133,7 +133,7 @@
 
     <!-- about callback start -->
     <section class="callback">
-        <video autoplay muted loop id="myVideo">
+        <video autoplay muted loop playsinline id="myVideo">
             <source src="/images/cta-video.mp4" type="video/mp4">
         </video>
         <div class="cta-content">
